[gd_scene load_steps=8 format=3 uid="uid://bnj8k4etmouic"]

[ext_resource type="Script" path="res://scenes/bullet/bullet.gd" id="1_b6w8w"]

[sub_resource type="BoxMesh" id="BoxMesh_n3m2u"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1es14"]
albedo_color = Color(0.898437, 0.207381, 0.703948, 1)
emission_enabled = true
emission = Color(0.597289, 0.423601, 0.12388, 1)
emission_energy_multiplier = 8.1

[sub_resource type="BoxShape3D" id="BoxShape3D_n6r41"]
size = Vector3(1.07959, 1.07104, 1)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_1ixsa"]
emission_shape = 1
emission_sphere_radius = 1.0
spread = 180.0
initial_velocity_min = 3.0
initial_velocity_max = 5.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_t30th"]
albedo_color = Color(0.993971, 0.257631, 0.641562, 1)
emission_enabled = true
emission = Color(0.956538, 0, 0.182409, 1)
emission_energy_multiplier = 8.0

[sub_resource type="BoxMesh" id="BoxMesh_ax7xd"]
material = SubResource("StandardMaterial3D_t30th")
size = Vector3(0.04, 0.04, 0.04)

[node name="Bullet" type="CharacterBody3D" groups=["bullet"]]
transform = Transform3D(0.95, 0, 0, 0, 0.95, 0, 0, 0, 0.95, 0, 0, 0)
collision_layer = 4
collision_mask = 0
slide_on_ceiling = false
floor_constant_speed = true
floor_block_on_wall = false
script = ExtResource("1_b6w8w")
speed = 10.0

[node name="RayCast3D" type="RayCast3D" parent="."]
target_position = Vector3(0, 0, 1)
collision_mask = 24

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 0, 0, 0)
custom_aabb = AABB(0, 0, 0, 0.05, 0.05, 0)
mesh = SubResource("BoxMesh_n3m2u")
surface_material_override/0 = SubResource("StandardMaterial3D_1es14")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 0, 0, 0)
shape = SubResource("BoxShape3D_n6r41")

[node name="Explosion" type="GPUParticles3D" parent="."]
emitting = false
lifetime = 0.5
one_shot = true
explosiveness = 1.0
fixed_fps = 10
fract_delta = false
process_material = SubResource("ParticleProcessMaterial_1ixsa")
draw_pass_1 = SubResource("BoxMesh_ax7xd")

[node name="LifeTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="finished" from="Explosion" to="." method="_on_explosion_finished"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_life_timer_timeout"]
